--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-.menu-header {
+#menu-header {
   background-color: #FFF;
   height: 70px;
 }
@@ -76,7 +76,13 @@
     }
 
     to {
-      height: 100%;
+      height: 100vh;
     }
+  }
+}
+
+@media (min-width: 1920px) {
+  .menu-nav {
+    justify-content: space-around;
   }
 }
